<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.first.choice.Activity.BankInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/bank_name"
                        android:textStyle="bold"
                        android:textColor="@color/meesho_gray_dark"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:textStyle="bold"
                        android:text="@string/hdfc_bank"
                        android:textColor="@color/meesho_gray_dark"
                        android:textSize="14dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/meesho_gray_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:textStyle="bold"
                        android:text="@string/account_name"
                        android:textColor="@color/meesho_gray_dark"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/company_name_2_lines"
                        android:textColor="@color/meesho_gray_dark"
                        android:textIsSelectable="true"
                        android:textSize="14dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/meesho_gray_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="Account Number"
                        android:textStyle="bold"
                        android:textColor="@color/meesho_gray_dark"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/hdfc_account_number"
                        android:textColor="@color/meesho_gray_dark"
                        android:textIsSelectable="true"
                        android:textSize="14dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/meesho_gray_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/ifsc_code_label"
                        android:textStyle="bold"
                        android:textColor="@color/meesho_gray_dark"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/bank_ifsc_code"
                        android:textColor="@color/meesho_gray_dark"
                        android:textIsSelectable="true"
                        android:textStyle="bold"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:background="@color/colorAccent" />-->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_5">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:src="@drawable/danger" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:text=" We accept only IMPS payments for quick payment approvals."
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:background="@color/colorAccent" />-->
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
