<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebeef4"

    tools:context="com.first.choice.Fragment.TherdFragment">


    <LinearLayout
        android:id="@+id/ll_emptybox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/empty_product_group_img" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/empty_basket_txt1"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/empty_basket_txt2"
                android:textSize="17dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_view_start"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="115dp"
            android:background="@drawable/background_rectangle_rounded_corner_red"
            android:gravity="center"
            android:text="@string/startShopping"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/cardView"
            android:layout_centerInParent="true"
            android:padding="1dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/meesho_80"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="left"
                    android:text="Total Price"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="end"
                    android:tag="binding_15"
                    android:text="$ 570"
                    android:textColor="@color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_5"
            android:gravity="center">

            <Button
                android:id="@+id/proceed"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/meesho"
                android:drawableLeft="@drawable/ic_next"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="5dp"
                android:tag="binding_10"
                android:text="Proceed"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>


</FrameLayout>
