<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/Rest_title"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/Ivcancle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/Mobile_Number" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/today_round_border"
            android:gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/Mobile_Number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/code_sent_to"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.20"
                android:background="@drawable/today_round_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.20"
                android:background="@drawable/today_round_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.20"
                android:background="@drawable/today_round_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.20"
                android:background="@drawable/today_round_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center_vertical|fill_vertical|center|fill"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/meesho_button"
            android:text="@string/Send_Otp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>